# SistemasOperacionais

./: CMakeCache.txt  CMakeDirectoryInformation.cmake  CMakeLists.txt  ChefeCozinha.cpp  ChefeCozinha.h  ChefeCozinha_1.txt  ChefeCozinha_2.txt  ChefeCozinha_3.txt  CozinhaSistemasOperacionais.cbp  CozinhaSistemasOperacionais.exe.stackdump  HostessConect.cpp  HostessConect.h  Main.cpp  Makefile  Makefile2  Mesa.cpp  Mesa.h  clion-log.txt  cmake_install.cmake  wer
CozinhaSistemasOperacionais.dir/: DependInfo.cmake  link.txt
